Better default .htaccess

--- a/backend/.htaccess
+++ b/backend/.htaccess
@@ -10,4 +10,4 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 
 # Put the absolute path to your index.php here - e.g. /subfolder/backend/index.php
-RewriteRule ^ index.php [QSA,L]
+RewriteRule ^ /backend/index.php [QSA,L]
